refactor(chat, message): update orm methods call, add param search in GetUserChats
