# docs/swagger.json
@@ -301,6 +301,12 @@
                         "description": "Token for pagination",
                         "name": "nextToken",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search query for user name or last message text",
+                        "name": "search",
+                        "in": "query"
                     }
                 ],
                 "responses": {
